# device-base-esp32

./: CMakeLists.txt  Makefile  README.md  TODO  partitions.csv  readme.md  sdkconfig
main/: BME280.cpp  BME280.h  BME280_Barometric.cpp  BME280_Barometric.h  BME280_Humidity.cpp  BME280_Humidity.h  BME280_Temp.cpp  BME280_Temp.h  CMakeLists.txt  I2C.cpp  I2C.h  JarGarden.cpp  Jar_garden.cpp  Jar_garden.h  SenseBuffer.cpp  SenseBuffer.h  SensorInfo.cpp  SensorInfo.h  Sensors.cpp  Sensors.h  api_client.c  api_client.h  bt.c  bt.h  component.mk  config.common.h  config.default.h  config.h  debug.h  device_depend.cpp  device_depend.h  fan.c  fan.cpp  fan.h  globals.h  hardware.h  httpc.c  httpc.h  light.c  light.cpp  (+23 more)
