idf_component_register(SRCS ./bt.c ./light.c ./wifi.c ./nvs.c ./neopixel.c ./JarGarden.cpp)
                       INCLUDE_DIRS include                       # Edit following two lines to set component requirements (see docs)
                       REQUIRES )
                       PRIV_REQUIRES )

